--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,7 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 100px;
 }
 .popular-tour-container {
   width: 530px;
@@ -116,4 +117,35 @@ span {
 }
 .popular-tour-btn > button {
   font-size: 20px;
+}
+
+/* Destination styles  */
+.destination-container {
+  text-align: center;
+}
+.destination-title {
+  color: #131318;
+  font-size: 40px;
+  font-weight: 800;
+  margin-bottom: 24px;
+}
+.destination-description {
+  color: rgba(19, 19, 24, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+  width: 643px;
+  margin: auto auto 48px;
+}
+.destination-images-row-one {
+  display: flex;
+  gap: 24px;
+}
+.destination-images-row-two {
+  display: flex;
+  gap: 24px;
+  margin: 24px auto 24px;
+}
+.destination-images-row-three {
+  display: flex;
+  gap: 24px;
 }
