--- a/styles/style.css
+++ b/styles/style.css
@@ -106,11 +106,6 @@ main {
 .popular-tour-container {
   width: 530px;
 }
-/* .popular-tour-title {
-  color: #131318;
-  font-size: 40px;
-  font-weight: 800;
-} */
 
 .popular-tour-description > span,
 li,
@@ -132,12 +127,6 @@ span {
   text-align: center;
   margin-bottom: 100px;
 }
-/* .destination-title {
-  color: #131318;
-  font-size: 40px;
-  font-weight: 800;
-  margin-bottom: 24px;
-} */
 
 .destination-description {
   color: rgba(19, 19, 24, 0.7);
@@ -146,18 +135,94 @@ span {
   width: 643px;
   margin: auto auto 48px;
 }
+
+.destination-background-image {
+  border-radius: 16px;
+  height: 300px;
+  width: 573px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.destination-background-image > h1 {
+  padding-top: 132px;
+  color: #fff;
+  font-size: 28px;
+  font-weight: 800;
+}
+
 .destination-images-row-one {
   display: flex;
   gap: 24px;
+}
+.destination-image-maldives {
+  background-image: linear-gradient(
+      0deg,
+      rgba(19, 19, 24, 0.2) 0%,
+      rgba(19, 19, 24, 0.2) 100%
+    ),
+    url("../Images/Rectangle\ 5.png");
+}
+.destination-image-indonesia {
+  background-image: linear-gradient(
+      0deg,
+      rgba(19, 19, 24, 0.2) 0%,
+      rgba(19, 19, 24, 0.2) 100%
+    ),
+    url("../Images/Rectangle\ 8.png");
 }
 .destination-images-row-two {
   display: flex;
   gap: 24px;
   margin: 24px auto 24px;
 }
+.destination-image-srilanka {
+  background-image: linear-gradient(
+      0deg,
+      rgba(19, 19, 24, 0.2) 0%,
+      rgba(19, 19, 24, 0.2) 100%
+    ),
+    url("../Images/Rectangle\ 6.png");
+  width: 374px;
+}
+.destination-image-north-america {
+  background-image: linear-gradient(
+      0deg,
+      rgba(19, 19, 24, 0.2) 0%,
+      rgba(19, 19, 24, 0.2) 100%
+    ),
+    url("../Images/Rectangle\ 7.png");
+  width: 474px;
+}
+.destination-image-kashmir {
+  background-image: linear-gradient(
+      0deg,
+      rgba(19, 19, 24, 0.2) 0%,
+      rgba(19, 19, 24, 0.2) 100%
+    ),
+    url("../Images/Rectangle\ 9.png");
+  width: 274px;
+}
+
 .destination-images-row-three {
   display: flex;
   gap: 24px;
+}
+.destination-image-bangladesh {
+  background-image: linear-gradient(
+      0deg,
+      rgba(19, 19, 24, 0.2) 0%,
+      rgba(19, 19, 24, 0.2) 100%
+    ),
+    url("../Images/Rectangle\ 11.png");
+}
+.destination-image-bandarban {
+  background-image: linear-gradient(
+      0deg,
+      rgba(19, 19, 24, 0.2) 0%,
+      rgba(19, 19, 24, 0.2) 100%
+    ),
+    url("../Images/Rectangle\ 10.png");
 }
 
 /* Choose Us Style */
