--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,46 @@ main {
   font-weight: 700;
 }
 
+/* navbar styles */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 52px;
+}
+.nav-title {
+  /* padding-top: 110px; */
+  margin-bottom: 24px;
+  color: #131318;
+  font-size: 32px;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav-title > img {
+  margin-right: 16px;
+}
+.nav-travel-text {
+  color: #ff5400;
+  font-size: 32px;
+  font-weight: 800;
+}
+
+.nav-link > ul {
+  display: flex;
+}
+.nav-link li {
+  list-style: none;
+  margin-right: 44px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+}
+.nav-link-home {
+  color: #ff5400;
+}
+
 /* banner style */
 .banner {
   background-image: linear-gradient(
