--- a/styles/style.css
+++ b/styles/style.css
@@ -232,6 +232,7 @@ span {
       rgba(19, 19, 24, 0.2) 100%
     ),
     url("../Images/Rectangle\ 6.png");
+  width: 60%;
 }
 .destination-image-north-america {
   background-image: linear-gradient(
@@ -248,6 +249,7 @@ span {
       rgba(19, 19, 24, 0.2) 100%
     ),
     url("../Images/Rectangle\ 9.png");
+  width: 40%;
 }
 
 .destination-images-row-three {
@@ -522,7 +524,7 @@ footer > hr {
   /* banner responsive design */
   .banner {
     height: 483px;
-    margin-top: 17px;
+    margin-top: 48px;
     margin-bottom: 24px;
   }
   .banner-title {
@@ -558,6 +560,7 @@ footer > hr {
     align-items: start;
     gap: 24px;
     margin-bottom: 24px;
+    margin-top: 48px;
   }
   .popular-tour > img {
     margin-left: 0;
@@ -579,6 +582,7 @@ footer > hr {
   /* destination */
   .destination-container {
     margin-bottom: 24px;
+    margin-top: 48px;
     text-align: center;
   }
   .destination-description {
@@ -604,6 +608,7 @@ footer > hr {
   /* Choose Us */
   .choose-us-container {
     text-align: center;
+    margin-top: 48px;
     margin-bottom: 24px;
   }
   .choose-us-description {
@@ -630,9 +635,13 @@ footer > hr {
   }
 
   /* Feedback Style */
+  .feedback-container {
+    margin-top: 48px;
+  }
   .feedback {
     flex-direction: column;
     gap: 72px;
+    margin-top: 24px;
   }
 
   /* newsletter */
@@ -646,8 +655,6 @@ footer > hr {
   }
   .newsletter-title {
     font-size: 20px;
-  }
-  .newsletter-description {
   }
   #newsletter-text,
   #newsletter-email {
@@ -695,10 +702,10 @@ footer > hr {
   }
   .footer-title > img {
     width: 28px;
-    margin-right: 14px;
+    margin-right: 10px;
   }
   .footer-description {
-    width: 287px;
+    width: 60%;
     font-size: 14px;
   }
 }
